added sitemap and robots

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Sahel - Services de conciergerie en ligne pour petits travaux, ménage et cuisine. Obtenez des devis personnalisés et gérez vos réservations facilement."
+    />
     <title>Sahel</title>
   </head>
   <body>
